更新 4.常用软件使用.md

--- a/4.常用软件使用.md
+++ b/4.常用软件使用.md
@@ -27,7 +27,8 @@ fcitx5-chinese-addons
        以输入法运行在sway为例：  
        进入sway配置文件添加  
        exec --no-startup-id fcitx5 -d  
-  
+
+# ceshi
   
 三.版本控制软件git  
    0.基础知识  
